--- a/requirements.txt
+++ b/requirements.txt
@@ -14,12 +14,15 @@ cycler==0.12.1
 distro==1.9.0
 dnspython==2.7.0
 faiss-cpu==1.9.0
+filelock==3.17.0
 fonttools==4.54.1
+fsspec==2025.2.0
 gitdb==4.0.11
 GitPython==3.1.43
 h11==0.14.0
 httpcore==1.0.6
 httpx==0.27.2
+huggingface-hub==0.29.1
 idna==3.10
 Jinja2==3.1.4
 jiter==0.7.0
@@ -33,6 +36,7 @@ matplotlib==3.9.2
 mdurl==0.1.2
 mpmath==1.3.0
 narwhals==1.13.2
+networkx==3.4.2
 numpy==2.1.3
 openai==1.54.3
 packaging==24.1
@@ -50,23 +54,30 @@ PyMuPDF==1.24.13
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
+PyYAML==6.0.2
 referencing==0.35.1
+regex==2024.11.6
 requests==2.32.3
 rich==13.9.4
 rpds-py==0.21.0
+safetensors==0.5.2
 scikit-learn==1.5.2
 scipy==1.14.1
 seaborn==0.13.2
+setuptools==75.8.0
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
 streamlit==1.40.0
-sympy==1.13.3
+sympy==1.13.1
 tenacity==9.0.0
 threadpoolctl==3.5.0
+tokenizers==0.21.0
 toml==0.10.2
+torch==2.6.0
 tornado==6.4.1
 tqdm==4.67.0
+transformers==4.49.0
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
